--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 actix-web = "2"
 actix-rt = "1"
 actix-files = "0.2.2"
-sqlx = { version = "0.3", features = [ "postgres" ] }
+chrono = { version = "0.4.13", features = ["serde"] }
+sqlx = { version = "0.3", features = [ "postgres", "chrono" ] }
+sqlx-pg-migrate = "1.0.4"
+include_dir = "0.6.0"
 anyhow = "1.0.28"
 serde = "1.0.106"
 serde_json = "1.0.51"
